session3/configs/frontend/frontend-header-developer-route-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authors
spec:
  hosts:
    - authors
  http:
    - match:
        - headers:
            developer:
              exact: Sverdlov Ivan
      route:
        - destination:
            host: authors
            subset: v2
    - route:
        - destination:
            host: authors
            subset: v1
